--- a/index.html
+++ b/index.html
@@ -6,70 +6,55 @@
   <title>Vandana Malviya - Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <!-- Hero Section -->
-  <section class="text-center py-12 bg-indigo-600 text-white">
-    <h1 class="text-4xl font-bold">Vandana Malviya</h1>
-    <p class="mt-2 text-xl">Software Developer & Trainer | 15+ Years Experience</p>
-  </section>
+<body class="bg-gradient-to-b from-blue-100 to-purple-100 text-gray-800 font-sans">
+  <div class="container mx-auto px-4 py-10">
+    <div class="text-center">
+      <h1 class="text-4xl font-bold text-purple-700 mb-4">Vandana Malviya</h1>
+      <p class="text-lg text-gray-700 mb-6">Senior Software Trainer | Full Stack Developer | 15+ Years Experience</p>
+      <a href="Vandana_Malviya_Developer_Resume.pdf" target="_blank" class="inline-block bg-gradient-to-r from-purple-500 to-blue-500 text-white px-6 py-3 rounded-full shadow-lg hover:shadow-2xl hover:scale-105 transition-transform duration-300">
+        📄 View Resume (PDF)
+      </a>
+    </div>
 
-  <!-- About Me -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-2">About Me</h2>
-    <p>
-      I am a passionate software trainer and developer with 15+ years of experience in Java, Python, Web Development, Android, and more. I’ve worked with leading institutions and companies, guiding students and professionals to become industry-ready.
-    </p>
-  </section>
+    <div class="mt-10 grid gap-6 md:grid-cols-2">
+      <div class="bg-white p-6 rounded-2xl shadow-md hover:shadow-lg transition-shadow">
+        <h2 class="text-xl font-semibold mb-2 text-purple-600">About Me</h2>
+        <p class="text-gray-700">I am a dedicated software trainer and developer with over 15 years of experience in teaching and mentoring students in Java, Python, Web Technologies, Android, and more. Passionate about helping learners grow through hands-on projects and real-world applications.</p>
+      </div>
 
-  <!-- Projects -->
-  <section class="bg-white p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-4">Projects</h2>
-    <div class="grid md:grid-cols-2 gap-4">
-      <div class="border p-4 rounded-lg shadow">
-        <h3 class="font-bold text-lg">E-FixMan (Mobile Repair Booking)</h3>
-        <p>J2EE project to manage mobile repair booking with brand/device selection and price estimate.</p>
+      <div class="bg-white p-6 rounded-2xl shadow-md hover:shadow-lg transition-shadow">
+        <h2 class="text-xl font-semibold mb-2 text-purple-600">Technical Skills</h2>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>Languages: C, C++, Java (Core & Advanced), Python, PHP</li>
+          <li>Web: HTML, CSS, JavaScript, Bootstrap, React, Tailwind</li>
+          <li>Mobile: Android Development</li>
+          <li>Database: MySQL, Oracle</li>
+          <li>Tools: Eclipse, NetBeans, VS Code</li>
+        </ul>
       </div>
-      <div class="border p-4 rounded-lg shadow">
-        <h3 class="font-bold text-lg">Airlines Reservation</h3>
-        <p>Java-based E-ticketing system with seat booking and user panel.</p>
+
+      <div class="bg-white p-6 rounded-2xl shadow-md hover:shadow-lg transition-shadow">
+        <h2 class="text-xl font-semibold mb-2 text-purple-600">Projects</h2>
+        <ul class="list-disc pl-5 text-gray-700">
+          <li>E-FixMan.com - Mobile Repair Booking Platform</li>
+          <li>Airlines Reservation System</li>
+          <li>Pic Puzzle Game (Swing)</li>
+          <li>Online Shopping & Travel Tour Web Apps</li>
+          <li>Android Apps: Online Restaurant, Pizza Parlor, Batch Listing</li>
+        </ul>
       </div>
-      <div class="border p-4 rounded-lg shadow">
-        <h3 class="font-bold text-lg">E-Book Shop (E-commerce)</h3>
-        <p>Online book/cake selling site using HTML, CSS, JS, and Bootstrap.</p>
-      </div>
-      <div class="border p-4 rounded-lg shadow">
-        <h3 class="font-bold text-lg">Technical Discussion Forum</h3>
-        <p>Forum for coding Q&A using JSP and Servlet.</p>
+
+      <div class="bg-white p-6 rounded-2xl shadow-md hover:shadow-lg transition-shadow">
+        <h2 class="text-xl font-semibold mb-2 text-purple-600">Contact</h2>
+        <p class="text-gray-700">📧 Email: <a href="mailto:vandana2022malviya@gmail.com" class="text-blue-600 hover:underline">vandana2022malviya@gmail.com</a></p>
+        <p class="text-gray-700">📞 Mobile: +91 7974004062 / 7771908680</p>
+        <p class="text-gray-700">📍 Location: Indore, Madhya Pradesh</p>
       </div>
     </div>
-  </section>
 
-  <!-- Skills -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-4">Skills</h2>
-    <ul class="list-disc list-inside">
-      <li>Languages: C, C++, Java (Core + Advanced), Python, PHP</li>
-      <li>Web Tech: HTML5, CSS3, JavaScript, Bootstrap, React, JQuery</li>
-      <li>Database: MySQL, Oracle</li>
-      <li>Tools: Eclipse, NetBeans, Tomcat, WAMP</li>
-    </ul>
-  </section>
-
-  <!-- Resume Download -->
-  <section class="bg-gray-100 p-6 text-center">
-    <h2 class="text-xl font-semibold mb-2">Resume</h2>
-    <a href="Vandana_Malviya_Developer_Resume.pdf" download class="bg-indigo-600 text-white px-4 py-2 rounded">Download My Resume</a>
-  </section>
-
-  <!-- Contact -->
-  <section class="p-6 max-w-4xl mx-auto">
-    <h2 class="text-2xl font-semibold mb-2">Contact Me</h2>
-    <p>Email: <a href="mailto:vandana2022malviya@gmail.com" class="text-indigo-600">vandana2022malviya@gmail.com</a></p>
-    <p>Phone: +91 7771908680</p>
-    <p>Location: Indore, Madhya Pradesh</p>
-  </section>
-
-  <!-- Footer -->
-  <footer class="text-center text-sm py-4 bg-gray-200">&copy; 2025 Vandana Malviya</footer>
+    <footer class="text-center mt-12 text-gray-600">
+      © 2025 Vandana Malviya. All rights reserved.
+    </footer>
+  </div>
 </body>
 </html>
