--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-b from-blue-100 to-purple-100 text-gray-800 font-sans">
+
+  <!-- 🔐 PASSWORD PROTECTION START -->
+  <script>
+    const allowedPassword = "vandana123";
+    const userInput = prompt("Enter portfolio password:");
+    if (userInput !== allowedPassword) {
+      document.body.innerHTML = "<h2 style='color:red;text-align:center;margin-top:50px;'>Access Denied</h2>";
+    }
+  </script>
+  <!-- 🔐 PASSWORD PROTECTION END -->
+
   <div class="container mx-auto px-4 py-10">
     <div class="text-center">
       <h1 class="text-4xl font-bold text-purple-700 mb-4">Vandana Malviya</h1>
@@ -48,13 +59,4 @@
         <h2 class="text-xl font-semibold mb-2 text-purple-600">Contact</h2>
         <p class="text-gray-700">📧 Email: <a href="mailto:vandana2022malviya@gmail.com" class="text-blue-600 hover:underline">vandana2022malviya@gmail.com</a></p>
         <p class="text-gray-700">📞 Mobile: +91 7974004062 / 7771908680</p>
-        <p class="text-gray-700">📍 Location: Indore, Madhya Pradesh</p>
-      </div>
-    </div>
-
-    <footer class="text-center mt-12 text-gray-600">
-      © 2025 Vandana Malviya. All rights reserved.
-    </footer>
-  </div>
-</body>
-</html>
+        <p class="text-gray-700">📍 Location: I
