--- a/index.html
+++ b/index.html
@@ -59,4 +59,13 @@
         <h2 class="text-xl font-semibold mb-2 text-purple-600">Contact</h2>
         <p class="text-gray-700">📧 Email: <a href="mailto:vandana2022malviya@gmail.com" class="text-blue-600 hover:underline">vandana2022malviya@gmail.com</a></p>
         <p class="text-gray-700">📞 Mobile: +91 7974004062 / 7771908680</p>
-        <p class="text-gray-700">📍 Location: I
+        <p class="text-gray-700">📍 Location: Indore, Madhya Pradesh</p>
+      </div>
+    </div>
+
+    <footer class="text-center mt-12 text-gray-600">
+      © 2025 Vandana Malviya. All rights reserved.
+    </footer>
+  </div>
+</body>
+</html>
