--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- 🔐 PASSWORD PROTECTION START -->
   <script>
-    const allowedPassword = "vandana123";
+    const allowedPassword = "vandana@123";
     const userInput = prompt("Enter portfolio password:");
     if (userInput !== allowedPassword) {
       document.body.innerHTML = "<h2 style='color:red;text-align:center;margin-top:50px;'>Access Denied</h2>";
